# isChIP

./: .gitmodules  Data.cpp  Data.h  Imitator.cpp  Imitator.h  OutTxtFile.cpp  OutTxtFile.h  README.md  TxtFile.cpp  TxtFile.h  bioTxtFile.cpp  bioTxtFile.h  common.cpp  common.h  def.h  isChIP.cpp  isChIP.h  makefile
src/: CMakeLists.txt  ChromSizesExt.cpp  ChromSizesExt.h  Data.cpp  Data.h  DataInFile.cpp  DataInFile.h  DataOutFile.cpp  DataOutFile.h  DataWriter.cpp  DataWriter.h  ImitFile.cpp  ImitFile.h  Imitator.cpp  Imitator.h  OutTxtFile.cpp  OutTxtFile.h  RandomGen.cpp  RandomGen.h  TxtFile.cpp  TxtFile.h  bioTxtFile.cpp  bioTxtFile.h  common.cpp  common.h  def.h  effPartition.cpp  effPartition.h  isChIP.cpp  isChIP.h  makefile
src/bioinfoBasic/: Data.cpp  Data.h  DataInFile.cpp  DataInFile.h  OrderedData.cpp  OrderedData.h  TxtFile.cpp  TxtFile.h  common.cpp  common.h
